--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,10 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@id/nav_posts"
+            android:id="@+id/nav_posts"
             android:title="Make A Post" />
         <item
-            android:id="@id/classes"
+            android:id="@+id/classes"
             android:title="Classes" />
         <item
             android:id="@id/nav_gallery"
