--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,11 @@
             android:id="@id/nav_gallery"
             android:title="Settings" />
         <item
-            android:id="@id/nav_slideshow"
+            android:id="@+id/nav_signout"
             android:title="Sign Out" />
+        <item
+            android:id="@+id/nav_feed"
+            android:title="Feed" />
+
     </group>
 </menu>
